--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ h1, h2, h3 {
     margin-left: 83px;
 }
 
+.selectStorage {
+    display:inline-block;
+    margin-left: 83px;
+}
+
 .storage-poll {
     padding: 20px;
     display: none;
